adding first commit

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <link rel="shortcut icon" href="https://i.pinimg.com/originals/2c/fc/93/2cfc93d7665f5d7728782700e50596e3.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
-        <title>Google Book Search</title>
+        <title>Movie Search</title>
     </head>
     <body>
       <noscript>
