--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
         <title>Movie Search</title>
     </head>
     <body>
+      <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0&appId=1322028754986038&autoLogAppEvents=1" nonce="3yVUrBit"></script>
       <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
